--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vitalsoft-api",
+  "name": "planvita-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -17,19 +17,24 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@prisma/sdk": "^3.15.2",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "uuid": "^13.0.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.5.2",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
@@ -41,6 +46,8 @@
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prisma": "^6.16.2",
+    "prisma-erd-generator": "^2.1.0",
+    "puppeteer": "^23.11.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
