--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.5.2",
@@ -49,6 +50,7 @@
     "prisma-erd-generator": "^2.1.0",
     "puppeteer": "^23.11.1",
     "ts-node": "^10.9.2",
+    "ts-toolbelt": "^9.6.0",
     "typescript": "^5.9.2"
   }
 }
