--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,13 @@
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "paths": {
       "@generated/prisma": ["../generated/prisma"]
     }
-  }
+  },
+  "include": ["src", "prisma"],
+  "exclude": ["node_modules"]
 }
