Fix: adicionado copy-prisma

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "copy-prisma": "mkdir -p dist/generated/prisma && cp -r generated/prisma/* dist/generated/prisma/",
+    "build": "tsc && npm run copy-prisma",
+    "start": "node dist/src/server.js",
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate",
     "lint": "eslint 'src/**/*.{ts,js}'",
