fix: corrigindo seeders

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "copy-prisma": "mkdir -p dist/generated/prisma && cp -r generated/prisma/* dist/generated/prisma/",
     "build": "tsc && npm run copy-prisma",
     "type": "module",
-    "start": "node dist/src/server.js",
+    "start": "node dist/server.js",
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate",
     "lint": "eslint 'src/**/*.{ts,js}'",
