--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
+    "lib": ["ES2020", "DOM"],
     "paths": {
       "@generated/prisma": ["../generated/prisma"]
     }
